# se-simulator

./: .gitignore  .ruff.toml  CLAUDE.md  README.md  fit.csv  pyproject.toml  run1.csv  run3.csv  test_meas_recipe.yml  test_sim_recipe.yml
configs/: sample_config.yaml
src/se_simulator/: __main__.py  main.py
src/se_simulator/config/: __init__.py  manager.py  recipe.py  schemas.py
src/se_simulator/config/defaults/: sim_conditions.yaml  system_config.yaml
src/se_simulator/ellipsometer/: __init__.py  calibration.py  jones.py  mueller.py  prcsa.py  signals.py
src/se_simulator/fitting/: __init__.py  engine.py  grid_builder.py  interpolation.py  library.py  mode_selector.py  pipeline.py  refinement.py  results.py  search.py  tmm_direct_fitter.py
src/se_simulator/materials/: __init__.py  database.py  interpolator.py  models.py
src/se_simulator/rcwa/: __init__.py  dispatcher.py  eigensolver.py  engine.py  fourier.py  modes.py  results.py  smatrix.py  tmm.py
src/se_simulator/recipe/: dotpath.py  manager.py
src/se_simulator/simulation/: __init__.py  runner.py
src/se_simulator/spectrum/: __init__.py  io.py  migrations.py  schema.py
src/se_simulator/ui/: __init__.py  main_window.py  recipe_editor.py
tests/: conftest.py  test_config.py  test_ellipsometer.py  test_fitting.py  test_fitting_pipeline.py  test_grid_builder.py  test_materials.py  test_mode_selector.py  test_mueller.py  test_rcwa_core.py  test_rcwa_engine.py  test_recipe.py  test_spectrum_file.py  test_stack_schema.py  test_tmm.py  test_tmm_direct_fitter.py  test_ui.py  test_ui_recipe_section.py
(+28 files in other folders)
