[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "se-simulator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "pydantic>=2.0",
    "pyyaml",
    "h5py",
    "pandas",
    "PySide6",
    "pyqtgraph",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/se_simulator"]
